增加ai分析辅助模块 替换为C++实现 删除原有java实现